--- a/bed-main/src/mail/templates/email-verification.hbs
+++ b/bed-main/src/mail/templates/email-verification.hbs
@@ -1,7 +1,174 @@
-<p>Hey {{name}},</p>
-<p>Please click below to confirm your email</p>
-<p>
-  <a href='{{verificationEmail}}'>Confirm</a>
-</p>
-
-<p>If you did not request this email you can safely ignore it.</p>
+<html
+  xmlns='http://www.w3.org/1999/xhtml'
+  xmlns:v='urn:schemas-microsoft-com:vml'
+  xmlns:o='urn:schemas-microsoft-com:office:office'
+><head><title></title><!--[if !mso]><!-- --><meta
+      http-equiv='X-UA-Compatible'
+      content='IE=edge'
+    /><!--<![endif]--><meta
+      http-equiv='Content-Type'
+      content='text/html; charset=UTF-8'
+    /><meta
+      name='viewport'
+      content='width=device-width,initial-scale=1'
+    /><style type='text/css'>#outlook a { padding:0; } .ReadMsgBody {
+      width:100%; } .ExternalClass { width:100%; } .ExternalClass * {
+      line-height:100%; } body {
+      margin:0;padding:0;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;
+      } table, td {
+      border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt; } img
+      { border:0;height:auto;line-height:100%;
+      outline:none;text-decoration:none;-ms-interpolation-mode:bicubic; } p {
+      display:block;margin:13px 0; }</style><!--[if !mso]><!--><style
+      type='text/css'
+    >@media only screen and (max-width:480px) { @-ms-viewport { width:320px; }
+      @viewport { width:320px; } }</style><!--<![endif]--><!--[if mso]>
+        <xml>
+        <o:OfficeDocumentSettings>
+          <o:AllowPNG/>
+          <o:PixelsPerInch>96</o:PixelsPerInch>
+        </o:OfficeDocumentSettings>
+        </xml>
+        <![endif]--><!--[if lte mso 11]>
+        <style type="text/css">
+          .outlook-group-fix { width:100% !important; }
+        </style>
+        <![endif]--><!--[if !mso]><!--><link
+      href='https://fonts.googleapis.com/css?family=Poppins:normal,italic,bold&display=swap'
+      rel='stylesheet'
+      type='text/css'
+    /><link
+      href='https://fonts.googleapis.com/css?family=Oswald:normal,italic,bold&display=swap'
+      rel='stylesheet'
+      type='text/css'
+    /><style type='text/css'>@import
+      url(https://fonts.googleapis.com/css?family=Poppins:normal,italic,bold&display=swap);
+      @import
+      url(https://fonts.googleapis.com/css?family=Oswald:normal,italic,bold&display=swap);</style><!--<![endif]--><style
+      type='text/css'
+    >@media only screen and (min-width:480px) { .mj-column-per-100 { width:100%
+      !important; max-width: 100%; } }</style></head><body
+    style='background-color:#eeeeee;'
+  ><div
+      style='background-color:#eeeeee;'
+    ><!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]--><div
+        style='background:#0d9488;background-color:#0d9488;Margin:0px auto;max-width:600px;'
+      ><table
+          align='center'
+          border='0'
+          cellpadding='0'
+          cellspacing='0'
+          role='presentation'
+          style='background:#0d9488;background-color:#0d9488;width:100%;'
+        ><tbody><tr><td
+                style='direction:ltr;font-size:0px;padding:30px;padding-bottom:40px;padding-left:30px;padding-right:30px;padding-top:30px;text-align:center;vertical-align:top;'
+              ><!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:540px;" ><![endif]--><div
+                  class='mj-column-per-100 outlook-group-fix'
+                  style='font-size:13px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;'
+                ><table
+                    border='0'
+                    cellpadding='0'
+                    cellspacing='0'
+                    role='presentation'
+                    width='100%'
+                  ><tbody><tr><td style='vertical-align:top;padding:0;'><table
+                            border='0'
+                            cellpadding='0'
+                            cellspacing='0'
+                            role='presentation'
+                            width='100%'
+                          ><tr><td
+                                align='left'
+                                style='font-size:0px;padding:10px;word-break:break-word;'
+                              ><div
+                                  style="font-family:'Oswald', 'Helvetica', 'Arial', sans-serif;font-size:24px;line-height:1.375;text-align:left;color:#ffffff;"
+                                >GoBookMe.Today</div></td></tr><tr><td
+                                style='font-size:0px;word-break:break-word;'
+                              ><!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td height="60" style="vertical-align:top;height:60px;"><![endif]--><div
+                                  style='height:60px;'
+                                >&nbsp;</div><!--[if mso | IE]></td></tr></table><![endif]--></td></tr><tr
+                            ><td
+                                align='left'
+                                style='font-size:0px;padding:10px;padding-top:10px;padding-right:60px;padding-bottom:30px;padding-left:10px;word-break:break-word;'
+                              ><div
+                                  style="font-family:'Poppins', 'Helvetica', 'Arial', sans-serif;font-size:58px;line-height:1.25;text-align:left;color:#ffffff;"
+                                ><strong>Email Verification</strong></div></td></tr><tr
+                            ><td
+                                align='left'
+                                style='font-size:0px;padding:10px;word-break:break-word;'
+                              ><div
+                                  style="font-family:'Poppins', 'Helvetica', 'Arial', sans-serif;font-size:24px;line-height:1.5;text-align:left;color:#ffffff;"
+                                >Hey
+                                  {{name}}<br /><br />Please click below to
+                                  verify your email address.</div></td></tr><tr
+                            ><td
+                                style='font-size:0px;word-break:break-word;'
+                              ><!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td height="30" style="vertical-align:top;height:30px;"><![endif]--><div
+                                  style='height:30px;'
+                                >&nbsp;</div><!--[if mso | IE]></td></tr></table><![endif]--></td></tr><tr
+                            ><td
+                                align='center'
+                                vertical-align='middle'
+                                style='font-size:0px;padding:10px;word-break:break-word;'
+                              ><table
+                                  border='0'
+                                  cellpadding='0'
+                                  cellspacing='0'
+                                  role='presentation'
+                                  style='border-collapse:separate;width:100%;line-height:100%;'
+                                ><tr><td
+                                      align='center'
+                                      bgcolor='#ffffff'
+                                      role='presentation'
+                                      style='border:none;border-radius:100px;cursor:auto;padding:10px 25px;background:#ffffff;'
+                                      valign='middle'
+                                    ><a
+                                        href='{{verificationEmail}}'
+                                        style="background:#ffffff;color:#0d9488;font-family:'Poppins', 'Helvetica', 'Arial', sans-serif;font-size:24px;font-weight:normal;line-height:1.75;Margin:0;text-decoration:none;text-transform:none;"
+                                        target='_blank'
+                                      ><strong
+                                        >Confirm</strong></a></td></tr></table></td></tr></table></td></tr></tbody></table></div><!--[if mso | IE]></td></tr></table><![endif]--></td></tr></tbody></table></div><!--[if mso | IE]></td></tr></table><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]--><div
+        style='background:#ffffff;background-color:#ffffff;Margin:0px auto;max-width:600px;'
+      ><table
+          align='center'
+          border='0'
+          cellpadding='0'
+          cellspacing='0'
+          role='presentation'
+          style='background:#ffffff;background-color:#ffffff;width:100%;'
+        ><tbody><tr><td
+                style='direction:ltr;font-size:0px;padding:20px;padding-bottom:0px;padding-left:20px;padding-right:20px;padding-top:20px;text-align:center;vertical-align:top;'
+              ><!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr></tr></table><![endif]--></td></tr></tbody></table></div><!--[if mso | IE]></td></tr></table><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]--><div
+        style='background:#ffffff;background-color:#ffffff;Margin:0px auto;max-width:600px;'
+      ><table
+          align='center'
+          border='0'
+          cellpadding='0'
+          cellspacing='0'
+          role='presentation'
+          style='background:#ffffff;background-color:#ffffff;width:100%;'
+        ><tbody><tr><td
+                style='direction:ltr;font-size:0px;padding:30px;padding-bottom:40px;padding-left:30px;padding-right:30px;padding-top:0px;text-align:center;vertical-align:top;'
+              ><!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:540px;" ><![endif]--><div
+                  class='mj-column-per-100 outlook-group-fix'
+                  style='font-size:13px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;'
+                ><table
+                    border='0'
+                    cellpadding='0'
+                    cellspacing='0'
+                    role='presentation'
+                    width='100%'
+                  ><tbody><tr><td style='vertical-align:top;padding:0;'><table
+                            border='0'
+                            cellpadding='0'
+                            cellspacing='0'
+                            role='presentation'
+                            width='100%'
+                          ><tr><td
+                                align='left'
+                                style='font-size:0px;padding:10px;word-break:break-word;'
+                              ><div
+                                  style="font-family:'Poppins', 'Helvetica', 'Arial', sans-serif;font-size:20px;line-height:1.5;text-align:left;color:#111827;"
+                                >If you didn’t ask to verify this address, you
+                                  can ignore this email.<br /><br />Thanks,<br
+                                  /><br />Your GoBookMe.Today team</div></td></tr></table></td></tr></tbody></table></div><!--[if mso | IE]></td></tr></table><![endif]--></td></tr></tbody></table></div><!--[if mso | IE]></td></tr></table><![endif]--></div></body></html>
