Implement SignUp with Facebook

--- a/bed-main/src/mail/templates/email-verification.html
+++ b/bed-main/src/mail/templates/email-verification.html
@@ -292,7 +292,7 @@
                                       valign="middle"
                                     >
                                       <a
-                                        href="http://localhost:3000/"
+                                        href="https://localhost:3000/"
                                         style="
                                           background: #ffffff;
                                           color: #0d9488;
